# VibeCoin

./: .env-example  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/ETL/: extract.py  spotify_extract.py  transform.py
app/utlis/: spotify.py  spotify_token.py
test/: test_extract.py  test_main.py  test_spotify_token.py  test_transform.py
