[project]
name = "vibecoin"
version = "0.1.0"
description = "VibeCoin is a data engineering project that explores the correlation between Spotify’s Top 50 Global songs and Bitcoin price fluctuations."
authors = [
    {name = "LuisRicardo",email = "palharini.luis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "spotipy (>=2.25.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"
run = "python app/main.py"